--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Type: Package
 Title: Bootstrap Statistics
 Version: 0.1.0
 Author: Erin D. Spruenken
-Maintainer: Erin D. Spruenken <spruenke@hu-berlin.de>
+Maintainer: Erin D. Spruenken <erin-dirk@spruenken.de>
 Description: Bootstrap Statistics and Tests. Helper function for matrix-based statistics (row- and columnwise computation).
 License: GPL (>= 2)
 Imports: Rcpp (>= 1.0.4)
@@ -11,4 +11,6 @@ LinkingTo: Rcpp
 RoxygenNote: 6.0.1.9000
 Encoding: UTF-8
 LazyData: true
+URL: https://amor.cms.hu-berlin.de/~spruenke/index.html
+Date: 2020-12-26
 
