updated version 0.2.0 - added t-Test 0.3.0 - added linear regression

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: nboot
 Type: Package
 Title: Bootstrap Statistics
-Version: 0.1.0
+Version: 0.3.0
 Author: Erin D. Spruenken
 Maintainer: Erin D. Spruenken <erin-dirk@spruenken.de>
 Description: Bootstrap Statistics and Tests. Helper function for matrix-based statistics (row- and columnwise computation).
 License: GPL (>= 2)
 Imports: Rcpp (>= 1.0.4)
-LinkingTo: Rcpp
+LinkingTo: Rcpp, RcppArmadillo
 RoxygenNote: 6.0.1.9000
 Encoding: UTF-8
 LazyData: true
