--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,16 @@
 theme: jekyll-theme-cayman
 title: nboot
 description: An R-Package for Bootstrap Statistics
+navbar-links:
+  About Me: "aboutme"
+  Resources:
+    - Beautiful Jekyll: "https://beautifuljekyll.com"
+    - Learn markdown: "https://www.markdowntutorial.com/"
+  Author's home: "https://deanattali.com"
+social-network-links:
+  email: "someone@example.com"
+  facebook: deanattali
+  github: daattali
+  twitter: daattali
+  patreon: DeanAttali
+  youtube: c/daattali
