--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ author:
   name: GitHub User
   email: your-email@domain.com
 
+minima:
   # generate social links in footer
   social_links:
     twitter: jekyllrb
