--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,7 @@
 theme: minima
 title: nboot
 description: An R-Package for Bootstrap Statistics
-author:
-  name: GitHub User
-  email: your-email@domain.com
+author: Erin Spruenken
 
 minima:
   # generate social links in footer
