--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: nboot
 Type: Package
 Title: Bootstrap Statistics
-Version: 0.4.0
+Version: 0.4.2
 Author: Erin D. Spruenken
 Maintainer: Erin D. Spruenken <erin-dirk@spruenken.de>
 Description: Bootstrap Statistics and Tests. Helper function for matrix-based statistics (row- and columnwise computation).
@@ -12,4 +12,8 @@ RoxygenNote: 7.1.1
 Encoding: UTF-8
 LazyData: true
 URL: https://amor.cms.hu-berlin.de/~spruenke/index.html
-Date: 2020-12-26
+Date: 2021-03-30
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
